added some file

--- a/cargo-delivery/index.html
+++ b/cargo-delivery/index.html
@@ -5,10 +5,77 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
+<header>
+    <ul class="top-line">
+        <li>
+            <ul class="list_language">
+                <li><a href="">RUS</a></li>
+                <li><a href="">ENG</a></li>
+                <li><a href="">FR</a></li>
+            </ul>
+        </li>
+        <li>8 (800) 123-45-67</li>
+        <li>sales@log.comm</li>
+    </ul>
+    <div class="bottom-line">
+        <div class="wrapper-bottom-line">
+            <div class="logo-and-location">
+                <div class="logo">
+                    <img src="./image/logo.png" alt="logo">
+                </div>
+<!--                <div class="vl"></div>-->
+                <div class="location">
+                    <img src="./image/placeholder.svg" alt="">
+                    <span>Our Office</span>
+                </div>
+            </div>
+            <nav>
+                <a href="">Services</a>
+                <a href="">About company</a>
+                <a href="">Vacancy</a>
+                <a href="">Contacts</a></nav>
+            </nav>
+        </div>
+    </div>
+</header>
+<section class="banner-section">
+    <div class="content-banner">
+        <h1>Freight transportation</h1>
+        <p>Transportation of oversized cargo in Russia and Europe. Full forwarding, insurance, packaging and storage of goods</p>
+    </div>
+</section>
+<section class="services">
+    <div class="firstBlock">
+        <div class="content-first-block">
+            <hr>
+            <h2>cargo transportation <br>in Europe</h2>
+            <span>EU countries, as well as Ukraine,<br> Belarus with all documents.</span>
+            <button>more details</button>
+        </div>
+    </div>
+    <div class="middleBlock">
+
+    </div>
+    <div class="lastBlock">
+        <div class="arrow-next">
+            <span>next</span>
+            <img src="./image/Arrow.png" alt="">
+        </div>
+        <div class="arrow-previous">
+            <img src="./image/Arrow.png" alt="">
+            <span>previous</span>
+        </div>
+        <div class="truck-car">
+            <img src="./image/rectangle.png" alt="">
+        </div>
+    </div>
+</section>
+
 
 </body>
 </html>
