added some changes

--- a/cargo-delivery/index.html
+++ b/cargo-delivery/index.html
@@ -59,7 +59,6 @@
         </div>
     </div>
     <div class="middleBlock">
-
     </div>
     <div class="lastBlock">
         <div class="arrow-next">
@@ -75,7 +74,96 @@
         </div>
     </div>
 </section>
+<section class="about-company-and-services">
+    <div class="container">
+        <div class="services">
+            <hr>
+            <h2>Services</h2>
 
+            <div class="choose-service">
+              <div class="elem-service">
+                  <div class="circle">
+                      <div class="bg_icon"></div>
+                  </div>
+                  <span>air transportation</span>
+              </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+            </div>
+            <div class="choose-service2">
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+            </div>
+        </div>
+        <div class="about-company">
+            <div class="info-company">
+                <hr>
+                <h2>about company</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet atque,
+                    blanditiis deserunt dolorum earum eum eveniet exercitationem illo itaque labore
+                    laudantium magnam, molestias natus praesentium quasi repellendus sit voluptates!</p>
+            </div>
+            <div class="summary-company">
+                <div class="countOffice block">
+                    <h1>48</h1>
+                    <span> offices in Europe</span>
+                </div>
+                <div class="countTruck block">
+                    <h1>361</h1>
+                    <span>trucks</span>
+                </div>
+                <div class="imgTruck block">
+                    <img src="./image/Rectangle2.png" alt="">
+                </div>
+                <div class="imgTruck block">
+                    <img src="./image/Rectangle2.png" alt="">
+                </div>
+                <div class="countEmployee block">
+                    <h1>1500</h1>
+                    <span>employees</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
