--- a/index.html
+++ b/index.html
@@ -5,10 +5,189 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
+<header>
+    <ul class="top-line">
+        <li>
+            <ul class="list_language">
+                <li><a href="">RUS</a></li>
+                <li><a href="">ENG</a></li>
+                <li><a href="">FR</a></li>
+            </ul>
+        </li>
+        <li>8 (800) 123-45-67</li>
+        <li>sales@log.comm</li>
+    </ul>
+    <div class="bottom-line">
+        <div class="wrapper-bottom-line">
+            <div class="logo-and-location">
+                <div class="logo">
+                    <img src="./image/logo.png" alt="logo">
+                </div>
+<!--                <div class="vl"></div>-->
+                <div class="location">
+                    <img src="./image/placeholder.svg" alt="">
+                    <span>Our Office</span>
+                </div>
+            </div>
+            <nav>
+                <a href="">Services</a>
+                <a href="">About company</a>
+                <a href="">Vacancy</a>
+                <a href="">Contacts</a></nav>
+            </nav>
+        </div>
+    </div>
+</header>
+<section class="banner-section">
+    <div class="content-banner">
+        <h1>Freight transportation</h1>
+        <p>Transportation of oversized cargo in Russia and Europe. Full forwarding, insurance, packaging and storage of goods</p>
+    </div>
+</section>
+<section class="services">
+    <div class="firstBlock">
+        <div class="content-first-block">
+            <hr>
+            <h2>cargo transportation <br>in Europe</h2>
+            <span>EU countries, as well as Ukraine,<br> Belarus with all documents.</span>
+            <button>more details</button>
+        </div>
+    </div>
+    <div class="middleBlock">
+    </div>
+    <div class="lastBlock">
+        <div class="arrow-next">
+            <span>next</span>
+            <img src="./image/Arrow.png" alt="">
+        </div>
+        <div class="arrow-previous">
+            <img src="./image/Arrow.png" alt="">
+            <span>previous</span>
+        </div>
+        <div class="truck-car">
+            <img src="./image/rectangle.png" alt="">
+        </div>
+    </div>
+</section>
+<section class="about-company-and-services">
+    <div class="container">
+        <div class="services">
+            <hr>
+            <h2>Services</h2>
 
+            <div class="choose-service">
+              <div class="elem-service">
+                  <div class="circle">
+                      <div class="bg_icon"></div>
+                  </div>
+                  <span>air transportation</span>
+              </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+            </div>
+            <div class="choose-service2">
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+                <div class="elem-service">
+                    <div class="circle">
+                        <div class="bg_icon"></div>
+                    </div>
+                    <span>air transportation</span>
+                </div>
+            </div>
+        </div>
+        <div class="about-company">
+            <div class="bg_service">
+
+            </div>
+            <div class="info-company">
+                <hr>
+                <h2>about company</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet atque,
+                    blanditiis deserunt dolorum earum eum eveniet exercitationem illo itaque labore
+                    laudantium magnam, molestias natus praesentium quasi repellendus sit voluptates!</p>
+            </div>
+            <div class="summary-company">
+                <div class="countOffice block">
+                    <h1>48</h1>
+                    <span> offices in Europe</span>
+                </div>
+                <div class="countTruck block">
+                    <h1>361</h1>
+                    <span>trucks</span>
+                </div>
+                <div class="imgTruck block">
+                    <img src="./image/Rectangle2.png" alt="">
+                </div>
+                <div class="imgTruck block">
+                    <img src="./image/Rectangle2.png" alt="">
+                </div>
+                <div class="countEmployee block">
+                    <h1>1500</h1>
+                    <span>employees</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="footer">
+            <div class="logo_footer">
+                <img src="./image/logo%20_footer.png" alt="">
+            </div>
+            <div class="contact-footer">
+                <p>123456, Санкт-Петербург, Невский пр-кт 127</p>
+                <span>sales@log.ru</span>
+            </div>
+            <div class="number-footer">
+                <span>+7 (812) 344-56-65</span>
+                <span>+7 (812) 344-56-65</span>
+            </div>
+            <div class="text-footer">
+                <a href="">Разработано - D-E-N.ru</a>
+            </div>
+        </div>
+
+    </div>
+
+</footer>
 </body>
 </html>
